--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "agency",
-  "title": "Agency",
+  "name": "mypapercat",
+  "title": "mypapercat",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/agency",
-  "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "url": "https://mypapercat.herokuapp.com/"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
@@ -21,8 +19,13 @@
     "gulp-uglify": "^1.5.4",
     "jquery": "^1.11.3"
   },
+
+  "scripts": {
+    "start": "node gulpfile.js"
+  },
+
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+    "url": "https://github.com/sonyakhan/mypapercat.git"
   }
 }
