--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "url": "https://mypapercat.herokuapp.com/"
   },
   "devDependencies": {
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
     "font-awesome": "^4.6.3",
+    "express": "^4.11.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.10",
     "gulp-header": "^1.8.7",
