--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "gulp-uglify": "^1.5.4",
     "jquery": "^1.11.3"
   },
-
   "scripts": {
     "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
